--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,25 @@
     height: 400px;
     border: 2px solid black;
     margin: 20px;
-    /* Weitere Stile für das Spielbrett */
 }
 
 #gameCanvas {
     border: 1px solid black;
+}
+
+#currentPlayer {
+    font-size: 20px;
+    font-weight: bold;
+    color: #333;
+}
+
+#diceImage {
+    cursor: pointer;
+    width: 150px;
+    height: 150px;
+}
+
+.dice-filter {
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
 }
