--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,71 @@
-#gameBoard {
-    width: 400px;
-    height: 400px;
-    border: 2px solid black;
-    margin: 20px;
+/* Grundlegende Styles */
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    gap: 5%;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 5vh;
+}
+
+/* Header Styles */
+.game-header {
+    background-color: #4CAF50;
+    color: white;
+    text-align: center;
+    padding: 5vh 0;
+}
+
+.header-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo {
+    width: 10vh;
+    margin-right: 15px;
+}
+
+.game-header h1 {
+    margin: 0;
+    font-size: 24px;
+}
+
+/* Board styles */
+
+.boardSection {
+    flex: 1 0 0;
 }
 
 #gameCanvas {
     border: 1px solid black;
 }
 
+/* Sidebar */
+.sidebar {
+    flex: 1 0 0;
+    background-color: #4CAF50;
+    color: white;
+    text-align: center;
+    padding: 30vh 0;
+}
+
+/* Current color */
 #currentColor {
-    font-size: 30px;
+    font-size: 24px;
     font-weight: bold;
-    color: #333;
+    color: white;
+}
+
+/* Würfel styles */
+.diceSection {
+    flex: 1 0 0;
 }
 
 #diceImage {
@@ -24,4 +77,20 @@
 .dice-filter {
     -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
     filter: grayscale(100%);
+}
+
+/* Responsive layout */
+@media (max-width: 975px) {
+    .container {
+      flex-direction: column;
+    }
+
+    .sidebar {
+        flex: 1 0 0;
+        background-color: #4CAF50;
+        color: white;
+        text-align: center;
+        padding: 0;
+        width: 500px;
+    }
 }
