--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,8 @@ img {
 }
 
 canvas {
-    max-width: 600px;
-    max-height: 600px;
+    max-width: 500px;
+    max-height: 500px;
 }
 
 .container {
@@ -25,6 +25,10 @@ canvas {
     align-items: center;
     justify-content: space-between;
     margin-top: 5vh;
+}
+
+.clickable-cursor {
+    cursor: pointer;
 }
 
 /* Header Styles */
@@ -65,7 +69,7 @@ canvas {
     flex: 1 0 0;
     color: white;
     text-align: left;
-    padding: 20vh 20px;
+    padding: 10vh 20px;
     min-width: 300px;
 }
 
