--- a/styles.css
+++ b/styles.css
@@ -65,12 +65,18 @@ canvas {
     flex: 1 0 0;
     color: white;
     text-align: left;
-    padding: 10vh 20px;
+    padding: 5vh 20px;
     min-width: 300px;
 }
 
 /* Current color */
 #currentColor {
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+}
+
+#winMessage {
     font-size: 24px;
     font-weight: bold;
     color: white;
